--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,139 @@
 /* You can add global styles to this file, and also import other style files */
+
+// to remove the scrollbars on the page 
+@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+
+//importing the font Inter
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
+
+//import material icons
+@import url('https://fonts.googleapis.com/css?family=Material+Icons+Outlined|Material+Icons');
+
+html {
+    font-family: 'Inter', sans-serif;
+    color: #222;
+    overflow: hidden;
+}
+
+html, body {
+    height: 100%;
+}
+
+h1 {
+    font-size: 48px;
+}
+h2 {
+    font-size: 40px;
+    margin-bottom: 25px;
+}
+
+h1.is-bold,
+h2.is-bold {
+    font-weight: bold;
+    letter-spacing: -2px;
+}
+
+a {
+    text-decoration: none;
+}
+
+// to fit all other things accordingly we created this
+.container {
+    max-width: 850px;
+    margin: auto;
+}
+
+.btn {
+    display: inline-flex;
+    align-items: center;
+
+    padding: 12px 22px;
+    background: rgba(black, 0.7);
+
+    text-decoration: none;
+    color: white; // text color
+
+    font-size: 18px;
+    font-weight: 600;
+    font-family: inherit;
+
+    border: none;
+    border-radius: 4px;
+
+    cursor: pointer;
+
+    &:hover {
+        background: rgba(black, 0.78);
+        backdrop-filter: blur(2px);
+    }
+
+    &:active {
+        background: rgba(black, 0.85);
+    }
+}
+
+.btns-container {
+    display: flex;
+    gap: 12px; // for adding space between buttons
+
+    margin-top: 20px;
+
+    &.btns-centered {
+        justify-content: center;
+    }
+
+    .align-end {
+        margin-left: auto;
+    }
+}
+
+.has-blurred-white-bg {
+    background: rgba(white, 0.85);
+    backdrop-filter: blur(20px);
+}
+
+.form-field {
+    margin-bottom: 20px;
+
+    label.form-label {
+        display: block;
+        margin-bottom: 5px;
+        font-weight: 600;
+        color: rgba(black, 0.8);
+    }
+}
+
+.textbox,
+.textarea {
+    display: block;
+
+    font-size: 18px;
+    font-family: inherit;
+
+    padding: 8px 10px;
+    background-color: rgba(white, 0.9);
+
+    border: 2px solid rgba(black, 0.3);
+    border-radius: 4px;
+
+    width: 100%;
+
+    &:hover {
+        background: rgba(white, 0.95);
+    }
+
+    &:focus {
+        background: white;
+        outline: none;
+    }
+
+    &:hover,
+    &:focus {
+        border-color: rgba(black, 0.42);
+    }
+}
+
+.textarea {
+    resize: vertical;
+    min-height: 100px;
+}
